--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+	   			<h1>I'm Tony Darling.</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
-	   				<span>UI/UX Designer</span> 
+	   				<span>Full-stack Developer</span>
+	   				<span>E-commerce Developer</span> 
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -163,7 +163,7 @@
 				   	<strong>HTML5</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
+				   	<div class="progress percent95"><span>95%</span></div>
 				   	<strong>CSS3</strong>
 				   </li>
 				   <li>
@@ -178,6 +178,16 @@
 
 				   	<div class="progress percent75"><span>75%</span></div>
 				   	<strong>Wordpress</strong>
+				   </li>
+				   <li>
+
+				   	<div class="progress percent95"><span>95%</span></div>
+				   	<strong>React.js</strong>
+				   </li>
+				   <li>
+
+				   	<div class="progress percent90"><span>90%</span></div>
+				   	<strong>Laravel</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
